// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button can be presented as one of the allowed variants 1`] = `
<button
  class="sc-aXZVg hKkIfv"
  type="button"
>
  <span
    class="sc-gEvEer klHRnh"
  >
    Submit
  </span>
</button>
`;

exports[`Button can be presented as one of the new allowed variants 1`] = `
<button
  class="sc-aXZVg eHUIDQ"
  type="button"
>
  <span
    class="sc-gEvEer KUrcE"
  >
    Submit
  </span>
</button>
`;

exports[`Button renders 1`] = `
<button
  class="sc-aXZVg bPxQNm"
  type="button"
>
  <span
    class="sc-gEvEer klHRnh"
  >
    Submit
  </span>
</button>
`;
